--- a/css/css.css
+++ b/css/css.css
@@ -25,8 +25,15 @@ p {
 #idJohn {
     color: blue;
 }
+
 #id_count_exs {
     border: orange;
+}
+
+#buttonSub {
+    width: 60px;
+    height: 30px;
+    background-color: brown;
 }
 
 table, .inputAns {
