--- a/css/css.css
+++ b/css/css.css
@@ -33,7 +33,8 @@ p {
 #buttonSub {
     width: 60px;
     height: 30px;
-    background-color: brown;
+    background-color: rgb(138, 67, 204);
+    color: black;
 }
 
 table, .inputAns {
